--- a/random-act-generator/src/index.css
+++ b/random-act-generator/src/index.css
@@ -16,3 +16,20 @@ code {
   display:flex;
   flex-direction: column;
 }
+
+input,
+textarea {
+  margin-top: 32px;
+  margin-left: 29.5%;
+  padding: 0.5rem;
+  font-size: 16px;
+  width: 40%;
+  display: block;
+  border-radius: 4px;
+  border: 1px solid black;
+  text-align:center;
+}
+
+button {
+  margin-top:30px;
+}
