--- a/random-act-generator/src/index.css
+++ b/random-act-generator/src/index.css
@@ -17,8 +17,7 @@ code {
   flex-direction: column;
 }
 
-input,
-textarea {
+.input {
   margin-top: 32px;
   margin-left: 29.5%;
   padding: 0.5rem;
@@ -28,8 +27,14 @@ textarea {
   border-radius: 4px;
   border: 1px solid black;
   text-align:center;
+  margin-bottom: 30px;
 }
 
-button {
-  margin-top:30px;
+input.error {
+  border-color: red;
+}
+
+.error {
+  margin-top: 10px;
+  color: red;
 }
