--- a/random-act-generator/src/index.css
+++ b/random-act-generator/src/index.css
@@ -17,7 +17,7 @@ code {
   flex-direction: column;
 }
 
-.input {
+.act-name {
   margin-top: 32px;
   margin-left: 29.5%;
   padding: 0.5rem;
@@ -27,7 +27,20 @@ code {
   border-radius: 4px;
   border: 1px solid black;
   text-align:center;
-  margin-bottom: 30px;
+  margin-bottom: 32px;
+}
+
+.act-description {
+  margin-top: 32px;
+  margin-left: 29.5%;
+  padding: 0.5rem;
+  font-size: 16px;
+  width: 40%;
+  display: block;
+  border-radius: 4px;
+  border: 1px solid black;
+  text-align:center;
+  margin-bottom: 32px;
 }
 
 input.error {
@@ -35,6 +48,7 @@ input.error {
 }
 
 .error {
-  margin-top: 10px;
+  margin-top: 5px;
   color: red;
 }
+
