--- a/random-act-generator/src/App.css
+++ b/random-act-generator/src/App.css
@@ -146,7 +146,7 @@ input[type="checkbox"] ~ span:after {
   transform: rotate(45deg);
 }
 
-button {
+button, NavLink {
   max-width: 150px;
   margin: 32px 0;
   padding: 12px 20px;
