--- a/random-act-generator/src/index.css
+++ b/random-act-generator/src/index.css
@@ -39,3 +39,12 @@ input.error {
   color: red;
 }
 
+.acts-header {
+  font-size: 50px;
+}
+
+.act-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
